# rmpc

./: .envrc  .gitignore  .typos.toml  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  LICENSE  README.md  build.rs  flake.nix  index.html  rustfmt.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  docs_deploy.yml  relase.yml  release.yml  tests.yml
assets/: example_config.ron  example_theme.ron  rmpc-refined-config.ron  rmpc.desktop  test_theme.ron
assets/rmpcd/: example_init.lua
assets/themes/: rmpc-refined-light.ron  rmpc-refined.ron
docs/: .gitignore  .prettierrc.mjs  README.md  astro.config.mjs  ec.config.mjs  package-lock.json  package.json  tsconfig.json
docs/public/: run-rmpc  try  try.sh
docs/src/: content.config.ts  utils.ts
next/: index.html
next/configuration/: index.html
next/development/: index.html
next/installation/: index.html
next/overview/: index.html
next/themes/: index.html
next/try-without-install/: index.html
nix/: home-manager.nix  rmpc.nix  rmpcd.nix  ron.nix  shell.nix
release-0-10-0/: index.html
release-0-10-0/configuration/: index.html
release-0-10-0/development/: index.html
release-0-10-0/installation/: index.html
release-0-10-0/overview/: index.html
release-0-10-0/themes/: index.html
release-0-10-0/try-without-install/: index.html
release-0-9-0/: index.html
release-0-9-0/configuration/: index.html
release-0-9-0/development/: index.html
release-0-9-0/installation/: index.html
release-0-9-0/overview/: index.html
release-0-9-0/themes/: index.html
rmpc/: Cargo.toml  README.md  build.rs
rmpc-mpd/: Cargo.toml  README.md
rmpc-mpd/src/: address.rs  client.rs  errors.rs  filter.rs  from_mpd.rs  lib.rs  mpd_client.rs  proto_client.rs  queue_position.rs  single_or_range.rs  version.rs
rmpc-mpd/src/commands/: current_song.rs  decoders.rs  idle.rs  list.rs  list_all.rs  list_files.rs  list_mounts.rs  list_playlist.rs  list_playlists.rs  lsinfo.rs  messages.rs  metadata_tag.rs  mod.rs  mpd_config.rs  outputs.rs  playlist_info.rs  status.rs  stickers.rs  update.rs  volume.rs
rmpc-mpd/src/tests/fixtures/: mod.rs  mpd_client.rs
rmpc-shared/: Cargo.toml
rmpc-shared/src/: env.rs  lib.rs  paths.rs  string_ext.rs  version.rs
rmpc/src/: ctx.rs  main.rs
rmpc/src/config/: address.rs  album_art.rs  cli.rs  cli_config.rs  defaults.rs  mod.rs  search.rs  sort_mode.rs  tabs.rs
rmpc/src/config/keys/: actions.rs  key.rs  mod.rs
rmpc/src/config/theme/: borders.rs  cava.rs  level_styles.rs  lyrics.rs  mod.rs  progress_bar.rs  properties.rs  queue_table.rs  style.rs  volume_slider.rs
rmpc/src/core/: client.rs  command.rs  config_watcher.rs  event_loop.rs  input.rs  mod.rs  socket.rs  work.rs
rmpc/src/core/scheduler/: job.rs  repeated_job.rs  time_provider.rs
rmpc/src/shared/: album_art.rs  cmp.rs  config_read.rs  dependencies.rs  duration_format.rs  env.rs  events.rs  exit_code.rs  ext.rs  geometry.rs  id.rs  logging.rs  macros.rs  mod.rs  mouse_event.rs  mpd_client_ext.rs  mpd_query.rs  ring_vec.rs  song_ext.rs  tmux.rs
rmpc/src/shared/ipc/: in_flight_ipc.rs  ipc_stream.rs  mod.rs
rmpc/src/shared/ipc/commands/: index_lrc.rs  keybind.rs  query_tab.rs  set.rs  switch_tab.rs  tmux.rs
rmpc/src/shared/keys/: actions.rs  key_resolver.rs  trie.rs
rmpc/src/shared/lrc/: index.rs
rmpc/src/shared/terminal/: crossterm_backend.rs  emulator.rs  features.rs  mod.rs  tty.rs
rmpc/src/shared/ytdlp/: downloader.rs  error.rs  manager.rs  mod.rs
rmpc/src/tests/: remote_ipc.rs
rmpc/src/tests/fixtures/: mod.rs
rmpc/src/ui/: browser.rs  dir_or_song.rs  mod.rs  song_ext.rs  tab_screen.rs
rmpc/src/ui/dirstack/: dir.rs  mod.rs  path.rs  stack.rs  state.rs  walk.rs
rmpc/src/ui/image/: block.rs  facade.rs  iterm2.rs  kitty.rs  sixel.rs
rmpc/src/ui/input/: buffer.rs  events.rs  manager.rs  mod.rs
rmpc/src/ui/modals/: add_random_modal.rs  confirm_modal.rs  decoders.rs  downloads.rs  info_list_modal.rs  info_modal.rs  input_modal.rs  keybinds.rs  mod.rs  outputs.rs  select_modal.rs
rmpc/src/ui/modals/menu/: input_section.rs  list_section.rs  mod.rs  modal.rs  multi_action_section.rs  select_section.rs
rmpc/src/ui/panes/: album_art.rs  albums.rs  albums_grid.rs  cava.rs  directories.rs  empty.rs  gradient_art.rs  header.rs  logs.rs  lyrics.rs  mod.rs  playback_controls.rs  playlists.rs  progress_bar.rs  property.rs  queue.rs  queue_header.rs  recently_played.rs  states_controls.rs  tabs.rs  tag_browser.rs  volume.rs
rmpc/src/ui/panes/playlists/: tests.rs
rmpc/src/ui/panes/search/: inputs.rs  mod.rs
rmpc/src/ui/widgets/: browser.rs  header.rs  input.rs  progress_bar.rs  scrolling_line.rs  virtualized_table.rs  volume.rs
rmpcd/: Cargo.toml  README.md  build.rs
rmpcd/src/: async_client.rs  ctx.rs  event_loop.rs  ext.rs  kv_bridge.rs  lua.rs  main.rs  mpd_ext.rs
rmpcd/src/lua/: mod.rs  type_def_eject.rs
rmpcd/src/lua/builtin/: .luarc.json  .stylua.toml  lastfm.lua  lyrics.lua  notify.lua  playcount.lua  sync.lua
rmpcd/src/lua/builtin/types/: rmpcd.lua
rmpcd/src/lua/builtin/types/rmpcd/: fs.lua  http.lua  lastfm.lua  log.lua  lyrics.lua  notify.lua  playcount.lua  process.lua  sync.lua  util.lua
rmpcd/src/lua/builtin/types/rmpcd/mpd/: init.lua  song.lua  status.lua
rmpcd/src/lua/lualib/: fs.rs  hooks.rs  http.rs  log.rs  mod.rs  plugin.rs  process.rs  sync.rs  util.rs
rmpcd/src/lua/lualib/mpd/: c2c.rs  mod.rs  playback.rs  sticker.rs
rmpcd/src/lua/lualib/mpd/types/: metadata_tag.rs  mod.rs  on_off_oneshot.rs  song.rs  status.rs
rmpcd/src/lua/plugin/: entry.rs  lua_plugin.rs  mod.rs  plugin_loop.rs  store.rs  triggers.rs
rmpcd/src/lua/types/: rmpcd.lua
rmpcd/src/lua/types/rmpcd/: http.lua  lastfm.lua  util.lua
rmpcd/src/lua/types/rmpcd/mpd/: init.lua  song.lua
rmpcd/src/mpris/: metadata.rs  mod.rs  notify.rs  player.rs  root.rs  seek.rs  tracklist.rs
src/: cli.rs  config.rs  context.rs  ctx.rs  geometry.rs  logging.rs  main.rs  state.rs  utils.rs  ytdlp.rs
src/config/: address.rs  (+13 more)
(+450 files in other folders)
