[package]
name = "rmpc"
version = "0.10.0"
edition = "2024"
license = "BSD-3-Clause"
description = "A beautiful and configurable TUI client for MPD"
homepage = "https://rmpc.mierak.dev"
repository = "https://github.com/mierak/rmpc"
readme = "README.md"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
dialoguer = { version = "0.12.0", default-features = false }
anyhow = "1.0.100"
bon = "3.8.1"
base64 = "0.22.1"
crossterm = { version = "0.28.1", features = ["serde"] }
image = "0.25.9"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
strum = { workspace = true }
flate2 = { version = "1.1.5" }
itertools = "0.14.0"
ron = "0.12.0"
derive_more = { version = "2.1.0", features = ["into_iterator", "into", "as_ref", "display", "deref", "debug"] }
rustix = { version = "1.1.2", features = ["termios", "fs", "stdio", "process"] }
bitflags = { version = "2.10.0", features = ["serde"] }
log = { version = "0.4.29", features = ["kv"] }
flexi_logger = "0.31.7"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { workspace = true }
serde_with = "3.16.1"
either = "1.15.0"
walkdir = "2.5.0"
which = "8.0.0"
url = "2.5.7"
sysinfo = "0.37.2"
color_quant = "1.1.0"
enum-map = "2.7.3"
textwrap = "0.16.2"
crossbeam = "0.8.4"
notify-debouncer-full = "0.6.0"
unicode-width = "=0.2.0"
unicase = "2.8.1"
serde_path_to_error = "0.1.20"
serde_json = "1.0.145"
rand = "0.9.2"
ansi_colours = "1"
thiserror = "2.0.17"
parking_lot = { version = "0.12.5", features = [] }
unicode-segmentation = "1.12.0"
winnow = "^0.7.14"

[build-dependencies]
clap = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
clap_complete = "4.5.62"
clap_mangen = "0.2.31"
vergen-gitcl = { version = "1.0.8", features = ["build"] }
anyhow = "1.0.100"

[dev-dependencies]
rstest = "0.26.1"
test-case = "3.3.1"

[workspace.dependencies]
clap = { version = "4.5.53", features = ["derive", "cargo", "string" ] }
strum = { version = "0.27.2", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
single_match = "allow"
type_complexity = "allow"
module_name_repetitions = "allow"
unused_self = "allow"
unnested_or_patterns = "allow"
match_same_arms = "allow"
manual_let_else = "allow"
needless_return = "allow"
zero_sized_map_values = "allow"
too_many_lines = "allow"
match_single_binding = "allow"
struct_field_names = "allow"
redundant_closure_for_method_calls = "allow"
unwrap_used = "deny"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_sign_loss = "allow"

[lints.rust]
unused_macros = "allow"
deprecated = "allow"
