[workspace]
members = ["rmpc","rmpc-mpd", "rmpc-shared"]
resolver = "3"
default-members = ["rmpc"]

[workspace.package]
edition = "2024"
license = "BSD-3-Clause"
homepage = "https://rmpc.mierak.dev"
repository = "https://github.com/mierak/rmpc"
rust-version = "1.88.0"

[workspace.dependencies]
clap = { version = "4.5.56", features = ["derive", "cargo", "string" ] }
strum = { version = "0.27.2", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
log = { version = "0.4.29", features = ["kv"] }
anyhow = "1.0.100"
itertools = "0.14.0"
rand = "0.9.2"

# dev
rstest = "0.26.1"
test-case = "3.3.1"

# build
clap_complete = "4.5.65"
clap_mangen = "0.2.31"
vergen-gitcl = { version = "9.1.0", features = ["build"] }

dialoguer = { version = "0.12.0", default-features = false }
bon = "3.8.2"
base64 = "0.22.1"
crossterm = { version = "0.29.0", features = ["serde", "osc52"] }
image = "0.25.9"
ratatui = { version = "0.30.0", features = ["all-widgets"] }
flate2 = { version = "1.1.8" }
ron = "0.12.0"
derive_more = { version = "2.1.1", features = ["into_iterator", "into", "as_ref", "display", "deref", "debug"] }
rustix = { version = "1.1.3", features = ["termios", "fs", "stdio", "process"] }
bitflags = { version = "2.10.0", features = ["serde"] }
flexi_logger = "0.31.8"
chrono = { version = "0.4.43", features = ["serde"] }
serde_with = "3.16.1"
either = "1.15.0"
walkdir = "2.5.0"
which = "8.0.0"
url = "2.5.8"
sysinfo = "0.38.0"
color_quant = "1.1.0"
enum-map = "2.7.3"
textwrap = "0.16.2"
crossbeam = "0.8.4"
notify-debouncer-full = "0.7.0"
unicode-width = "=0.2.0"
unicase = "2.9.0"
serde_path_to_error = "0.1.20"
serde_json = "1.0.149"
ansi_colours = "1"
thiserror = "2.0.18"
parking_lot = { version = "0.12.5", features = [] }
unicode-segmentation = "1.12.0"
winnow = "^0.7.14"

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
single_match = "allow"
type_complexity = "allow"
module_name_repetitions = "allow"
unused_self = "allow"
unnested_or_patterns = "allow"
match_same_arms = "allow"
manual_let_else = "allow"
needless_return = "allow"
zero_sized_map_values = "allow"
too_many_lines = "allow"
match_single_binding = "allow"
struct_field_names = "allow"
redundant_closure_for_method_calls = "allow"
unwrap_used = "deny"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
cast_sign_loss = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
return_self_not_must_use = "allow"

[workspace.lints.rust]
unused_macros = "allow"
deprecated = "allow"
unused_crate_dependencies = "deny"
