[package]
name = "rmpc-mpd"
version = "0.11.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rmpc-shared = { path = "../rmpc-shared" }
anyhow = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
enum-map = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
rstest = "0.26.1"
test-case = "3.3.1"

[lints]
workspace = true
