[package]
name = "rmpc-shared"
version = "0.11.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }

[dev-dependencies]
test-case = { workspace = true }

[lints]
workspace = true

[features]
test-impl = []
