[package]
name = "rmpcd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rmpc-mpd = { path = "../rmpc-mpd" }
rmpc-shared = { path = "../rmpc-shared" }
mlua = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
serde_json = { workspace = true }
zbus = { workspace = true }
md5 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
reqwest = { workspace = true }
derive_more = { workspace = true }
# console-subscriber = { workspace = true }

[lints]
workspace = true
