[package]
name = "rmpcd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rmpc-mpd = { path = "../rmpc-mpd" }
rmpc-shared = { path = "../rmpc-shared" }
anyhow = { workspace = true }
bitflags = { workspace = true }
clap = { workspace = true }
ctrlc = { workspace = true }
derive_more = { workspace = true }
md5 = { workspace = true }
mlua = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "env-filter"] }
which = { workspace = true }
zbus = { workspace = true }

[build-dependencies]
walkdir = { workspace = true }

[dev-dependencies]
rmpc-shared = { path = "../rmpc-shared", features = ["test-impl"] }

[lints]
workspace = true
